# manhattan-silhouette

./: .gitignore  .pre-commit-config.yaml  .prettierrc  LICENSE  README.md  justfile  pyproject.toml  requirements.txt
evaluation/runtime_manhattan_silhouette/: .gitignore  README.md  _00_generate_instances.py  _01_run_benchmark.py  _02_check_data.ipynb  _03_extract_data.py  _04_analyze.ipynb  _05_make_tables.py  _99_rerun_rq2_standard.py  _conf.py  clean.py  codemap.md  run_all.py
evaluation/runtime_manhattan_silhouette/PUBLIC_DATA/tables/: rq1_million_point_speedup.tex
evaluation/runtime_manhattan_silhouette/_utils/: __init__.py  codemap.md  instance.py  instance_db.py  schema.py  strategies.py
evaluation/runtime_manhattan_silhouette/tests/: test_instance_db.py
src/manhattan_silhouette/: __init__.py  _axis.py  _compute_samples.py  _kernels.py  codemap.md  manhattan.py  prepare.py  testing.py  types.py
tests/: test_axis.py  test_kernels.py  test_manhattan.py  test_prepare.py  test_properties.py
